parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> body
Rule 1     body -> comparar PUNTOCOMA
Rule 2     body -> variable
Rule 3     body -> imprimir
Rule 4     body -> while
Rule 5     body -> for
Rule 6     body -> struct
Rule 7     body -> claseimplementacion
Rule 8     body -> funcionclaseimpl
Rule 9     body -> expresionif
Rule 10    body -> mathoperation
Rule 11    body -> creacionobjeto
Rule 12    body -> asignarvalorobjeto
Rule 13    body -> usarfuncionobjeto
Rule 14    body -> usarfuncion
Rule 15    empty -> <empty>
Rule 16    bodyblock -> empty
Rule 17    bodyblock -> bodyblock while
Rule 18    bodyblock -> bodyblock variable
Rule 19    bodyblock -> bodyblock for
Rule 20    bodyblock -> bodyblock struct
Rule 21    bodyblock -> bodyblock imprimir
Rule 22    bodyblock -> bodyblock expresionif
Rule 23    bodyblock -> bodyblock mathoperation
Rule 24    bodyblock -> bodyblock operacionbool
Rule 25    bodyblock -> bodyblock asignarvalorobjeto
Rule 26    bodyblock -> bodyblock creacionobjeto
Rule 27    bodyblock -> bodyblock usarfuncionobjeto
Rule 28    bodyblock -> bodyblock usarfuncion
Rule 29    expresionif -> IF LPAR condicionif RPAR conllaves expresionpos
Rule 30    expresionif -> IF LPAR condicionif RPAR sinllaves expresionpos
Rule 31    expresionif -> IF LPAR condicionif RPAR conllaves
Rule 32    expresionif -> IF LPAR condicionif RPAR sinllaves PUNTOCOMA
Rule 33    expresionif -> IF LPAR condicionif RPAR PUNTOCOMA expresionpos
Rule 34    expresionpos -> else
Rule 35    expresionpos -> elseif
Rule 36    elseif -> ELSE IF LPAR condicionif RPAR conllaves expresionpos
Rule 37    elseif -> ELSE IF LPAR condicionif RPAR sinllaves expresionpos
Rule 38    elseif -> ELSE IF LPAR condicionif RPAR conllaves
Rule 39    elseif -> ELSE IF LPAR condicionif RPAR sinllaves PUNTOCOMA
Rule 40    elseif -> ELSE IF LPAR condicionif RPAR PUNTOCOMA expresionpos
Rule 41    elseif -> ELSE IF LPAR condicionif RPAR sinllaves
Rule 42    elseif -> ELSE IF LPAR condicionif RPAR PUNTOCOMA
Rule 43    else -> ELSE conllaves
Rule 44    else -> ELSE sinllaves PUNTOCOMA
Rule 45    else -> ELSE PUNTOCOMA
Rule 46    sinllaves -> while
Rule 47    sinllaves -> variable
Rule 48    conllaves -> LLAVEL bodyblock LLAVER
Rule 49    condicionif -> initcondicion
Rule 50    condicionif -> statement
Rule 51    statement -> valorstatement
Rule 52    statement -> valorstatement masstatement
Rule 53    masstatement -> OR statement
Rule 54    masstatement -> AND statement
Rule 55    valorstatement -> comparar
Rule 56    valorstatement -> EXCLAMACION boolean
Rule 57    valorstatement -> id
Rule 58    valorstatement -> LPAR id RPAR
Rule 59    valorstatement -> EXCLAMACION LPAR id RPAR
Rule 60    valorstatement -> boolean
Rule 61    valorstatement -> numero
Rule 62    valorstatement -> LPAR boolean RPAR
Rule 63    valorstatement -> LPAR numero RPAR
Rule 64    initcondicion -> varblock statement
Rule 65    claseimplementacion -> CLASS IDENTIFICADOR LLAVEL bloqueclase LLAVER PUNTOCOMA
Rule 66    claseimplementacion -> CLASS IDENTIFICADOR LLAVEL LLAVER PUNTOCOMA
Rule 67    claseimplementacion -> CLASS IDENTIFICADOR LLAVEL acceso bloqueclase LLAVER PUNTOCOMA
Rule 68    acceso -> PUBLIC DOBLEPUNTO
Rule 69    acceso -> PRIVATE DOBLEPUNTO
Rule 70    acceso -> PROTECTED DOBLEPUNTO
Rule 71    bloqueclase -> bloqueclase atributoclase
Rule 72    bloqueclase -> atributoclase
Rule 73    atributoclase -> definicion
Rule 74    atributoclase -> funcionclaseimpl
Rule 75    definicion -> numerotipo IDENTIFICADOR PUNTOCOMA
Rule 76    definicion -> STRING IDENTIFICADOR PUNTOCOMA
Rule 77    definicion -> CHAR IDENTIFICADOR PUNTOCOMA
Rule 78    definicion -> BOOL IDENTIFICADOR PUNTOCOMA
Rule 79    funcionclaseimpl -> funcionimplvoid
Rule 80    funcionclaseimpl -> funcionimplnumero
Rule 81    funcionclaseimpl -> funcionimplstring
Rule 82    funcionclaseimpl -> funcionimplbool
Rule 83    funcionimplstring -> STRING IDENTIFICADOR parametrosimpl LLAVEL bodyblock RETURN concat PUNTOCOMA LLAVER
Rule 84    funcionimplstring -> CHAR IDENTIFICADOR parametrosimpl LLAVEL bodyblock RETURN CHARACTER PUNTOCOMA LLAVER
Rule 85    funcionimplstring -> CHAR IDENTIFICADOR parametrosimpl LLAVEL bodyblock RETURN IDENTIFICADOR PUNTOCOMA LLAVER
Rule 86    funcionimplvoid -> VOID IDENTIFICADOR parametrosimpl LLAVEL bodyblock LLAVER
Rule 87    funcionimplnumero -> numerotipo IDENTIFICADOR parametrosimpl LLAVEL bodyblock RETURN mathoperation PUNTOCOMA LLAVER
Rule 88    funcionimplnumero -> numerotipo IDENTIFICADOR parametrosimpl LLAVEL bodyblock RETURN IDENTIFICADOR PUNTOCOMA LLAVER
Rule 89    funcionimplnumero -> numerotipo IDENTIFICADOR parametrosimpl PUNTOCOMA
Rule 90    funcionimplbool -> BOOL IDENTIFICADOR parametrosimpl LLAVEL bodyblock RETURN operacionbool PUNTOCOMA LLAVER
Rule 91    funcionimplbool -> BOOL IDENTIFICADOR parametrosimpl LLAVEL bodyblock RETURN IDENTIFICADOR PUNTOCOMA LLAVER
Rule 92    funcionimplbool -> BOOL IDENTIFICADOR parametrosimpl PUNTOCOMA
Rule 93    parametrosimpl -> LPAR RPAR
Rule 94    parametrosimpl -> LPAR parametros RPAR
Rule 95    parametros -> tipo IDENTIFICADOR
Rule 96    parametros -> tipo IDENTIFICADOR masparametros
Rule 97    masparametros -> COMMA parametros
Rule 98    imprimir -> PRINT LPAR concat RPAR PUNTOCOMA
Rule 99    imprimir -> COUT MENOR MENOR concat PUNTOCOMA
Rule 100   imprimir -> COUT MENOR MENOR numero PUNTOCOMA
Rule 101   while -> WHILE LPAR statement RPAR LLAVEL bodyblock LLAVER
Rule 102   for -> FOR LPAR numerotipo IDENTIFICADOR IGUAL numero PUNTOCOMA expresion PUNTOCOMA unaryexp RPAR LLAVEL bodyblock LLAVER
Rule 103   varblock -> varblock variable
Rule 104   varblock -> variable
Rule 105   struct -> STRUCT IDENTIFICADOR LLAVEL LLAVER IDENTIFICADOR PUNTOCOMA
Rule 106   struct -> STRUCT IDENTIFICADOR LLAVEL varblock LLAVER IDENTIFICADOR PUNTOCOMA
Rule 107   unaryexp -> IDENTIFICADOR MAS MAS
Rule 108   unaryexp -> IDENTIFICADOR MENOS MENOS
Rule 109   variable -> variableauto
Rule 110   variable -> variablenumero
Rule 111   variable -> variablechar
Rule 112   variable -> variablestring
Rule 113   variable -> variablearraynumero
Rule 114   variable -> variablearraychar
Rule 115   variable -> variableboolean
Rule 116   variablenumero -> numerotipo id IGUAL mathoperation PUNTOCOMA
Rule 117   variablenumero -> numerotipo id PUNTOCOMA
Rule 118   variablenumero -> numerotipo id IGUAL IDENTIFICADOR PUNTOCOMA
Rule 119   variableauto -> AUTO id IGUAL valor PUNTOCOMA
Rule 120   variableauto -> AUTO id PUNTOCOMA
Rule 121   variablechar -> CHAR id IGUAL CHARACTER PUNTOCOMA
Rule 122   variablechar -> CHAR id PUNTOCOMA
Rule 123   variablechar -> CHAR id IGUAL IDENTIFICADOR PUNTOCOMA
Rule 124   variableboolean -> BOOL id IGUAL operacionbool PUNTOCOMA
Rule 125   variableboolean -> BOOL id PUNTOCOMA
Rule 126   variableboolean -> BOOL id IGUAL IDENTIFICADOR PUNTOCOMA
Rule 127   variablestring -> STRING id IGUAL stringappend PUNTOCOMA
Rule 128   variablestring -> STRING id IGUAL concat PUNTOCOMA
Rule 129   variablestring -> STRING id PUNTOCOMA
Rule 130   variablearraynumero -> numerotipo idarray PUNTOCOMA
Rule 131   variablearraynumero -> numerotipo idarray IGUAL LLAVEL arraydatanumero LLAVER PUNTOCOMA
Rule 132   variablearraynumero -> numerotipo idarray IGUAL LLAVEL LLAVER PUNTOCOMA
Rule 133   arraydatanumero -> arraydatanumero COMMA numero
Rule 134   arraydatanumero -> numero
Rule 135   variablearraychar -> CHAR idarray PUNTOCOMA
Rule 136   variablearraychar -> CHAR idarray IGUAL LLAVEL LLAVER PUNTOCOMA
Rule 137   variablearraychar -> CHAR idarray IGUAL LLAVEL datachar LLAVER PUNTOCOMA
Rule 138   variablearraychar -> CHAR idarray IGUAL CADENA PUNTOCOMA
Rule 139   datachar -> CHARACTER
Rule 140   datachar -> datachar COMMA CHARACTER
Rule 141   stringappend -> IDENTIFICADOR PUNTO APPEND LPAR stringdata RPAR
Rule 142   concat -> stringdata MAS concat
Rule 143   concat -> stringdata
Rule 144   creacionobjeto -> IDENTIFICADOR IDENTIFICADOR PUNTOCOMA
Rule 145   asignarvalorobjeto -> IDENTIFICADOR PUNTO IDENTIFICADOR IGUAL valor PUNTOCOMA
Rule 146   usarfuncionobjeto -> IDENTIFICADOR PUNTO IDENTIFICADOR funcparentesis PUNTOCOMA
Rule 147   usarfuncion -> IDENTIFICADOR funcparentesis PUNTOCOMA
Rule 148   funcparentesis -> LPAR RPAR
Rule 149   funcparentesis -> LPAR argumentosfuncion RPAR
Rule 150   argumentosfuncion -> valor
Rule 151   argumentosfuncion -> valor masargumentosfuncion
Rule 152   masargumentosfuncion -> COMMA argumentosfuncion
Rule 153   expresion -> valor comparador valor
Rule 154   expresion -> LPAR valor comparador valor RPAR
Rule 155   expresion -> EXCLAMACION LPAR valor comparador valor RPAR
Rule 156   comparar -> expresion
Rule 157   comparar -> mascomparaciones expresion
Rule 158   comparar -> LPAR mascomparaciones expresion RPAR
Rule 159   comparar -> EXCLAMACION LPAR mascomparaciones expresion RPAR
Rule 160   comparar -> LPAR mascomparaciones RPAR
Rule 161   mascomparaciones -> comparar comparador
Rule 162   mascomparaciones -> comparar LPAR comparador RPAR
Rule 163   mathoperation -> numero operation
Rule 164   mathoperation -> numero
Rule 165   operation -> MAS mathoperation
Rule 166   operation -> MENOS mathoperation
Rule 167   operation -> ASTERISCO mathoperation
Rule 168   operation -> SLASH mathoperation
Rule 169   operacionbool -> boolean comparador boolean
Rule 170   operacionbool -> boolean
Rule 171   boolean -> TRUE
Rule 172   boolean -> FALSE
Rule 173   comparador -> IGUAL IGUAL
Rule 174   comparador -> MENOR
Rule 175   comparador -> MAYOR
Rule 176   comparador -> MENOR IGUAL
Rule 177   comparador -> MAYOR IGUAL
Rule 178   comparador -> EXCLAMACION IGUAL
Rule 179   id -> IDENTIFICADOR
Rule 180   idarray -> IDENTIFICADOR CORCHETEL ENTERO CORCHETER
Rule 181   numero -> ENTERO
Rule 182   numero -> FLOTANTE
Rule 183   numerotipo -> INT
Rule 184   numerotipo -> FLOAT
Rule 185   numerotipo -> LONG
Rule 186   stringdata -> CADENA
Rule 187   stringdata -> IDENTIFICADOR
Rule 188   tipo -> numerotipo
Rule 189   tipo -> STRING
Rule 190   tipo -> CHAR
Rule 191   valor -> numero
Rule 192   valor -> CHARACTER
Rule 193   valor -> boolean
Rule 194   valor -> stringdata

Terminals, with rules where they appear

AND                  : 54
APPEND               : 141
ASTERISCO            : 167
AUTO                 : 119 120
BOOL                 : 78 90 91 92 124 125 126
CADENA               : 138 186
CHAR                 : 77 84 85 121 122 123 135 136 137 138 190
CHARACTER            : 84 121 139 140 192
CLASS                : 65 66 67
COMMA                : 97 133 140 152
CORCHETEL            : 180
CORCHETER            : 180
COUT                 : 99 100
DOBLEPUNTO           : 68 69 70
ELSE                 : 36 37 38 39 40 41 42 43 44 45
ENTERO               : 180 181
EXCLAMACION          : 56 59 155 159 178
FALSE                : 172
FLOAT                : 184
FLOTANTE             : 182
FOR                  : 102
IDENTIFICADOR        : 65 66 67 75 76 77 78 83 84 85 85 86 87 88 88 89 90 91 91 92 95 96 102 105 105 106 106 107 108 118 123 126 141 144 144 145 145 146 146 147 179 180 187
IF                   : 29 30 31 32 33 36 37 38 39 40 41 42
IGUAL                : 102 116 118 119 121 123 124 126 127 128 131 132 136 137 138 145 173 173 176 177 178
INT                  : 183
LLAVEL               : 48 65 66 67 83 84 85 86 87 88 90 91 101 102 105 106 131 132 136 137
LLAVER               : 48 65 66 67 83 84 85 86 87 88 90 91 101 102 105 106 131 132 136 137
LONG                 : 185
LPAR                 : 29 30 31 32 33 36 37 38 39 40 41 42 58 59 62 63 93 94 98 101 102 141 148 149 154 155 158 159 160 162
MAS                  : 107 107 142 165
MAYOR                : 175 177
MENOR                : 99 99 100 100 174 176
MENOS                : 108 108 166
OR                   : 53
PRINT                : 98
PRIVATE              : 69
PROTECTED            : 70
PUBLIC               : 68
PUNTO                : 141 145 146
PUNTOCOMA            : 1 32 33 39 40 42 44 45 65 66 67 75 76 77 78 83 84 85 87 88 89 90 91 92 98 99 100 102 102 105 106 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 135 136 137 138 144 145 146 147
RETURN               : 83 84 85 87 88 90 91
RPAR                 : 29 30 31 32 33 36 37 38 39 40 41 42 58 59 62 63 93 94 98 101 102 141 148 149 154 155 158 159 160 162
SLASH                : 168
STRING               : 76 83 127 128 129 189
STRUCT               : 105 106
TRUE                 : 171
VOID                 : 86
WHILE                : 101
error                : 

Nonterminals, with rules where they appear

acceso               : 67
argumentosfuncion    : 149 152
arraydatanumero      : 131 133
asignarvalorobjeto   : 12 25
atributoclase        : 71 72
bloqueclase          : 65 67 71
body                 : 0
bodyblock            : 17 18 19 20 21 22 23 24 25 26 27 28 48 83 84 85 86 87 88 90 91 101 102
boolean              : 56 60 62 169 169 170 193
claseimplementacion  : 7
comparador           : 153 154 155 161 162 169
comparar             : 1 55 161 162
concat               : 83 98 99 128 142
condicionif          : 29 30 31 32 33 36 37 38 39 40 41 42
conllaves            : 29 31 36 38 43
creacionobjeto       : 11 26
datachar             : 137 140
definicion           : 73
else                 : 34
elseif               : 35
empty                : 16
expresion            : 102 156 157 158 159
expresionif          : 9 22
expresionpos         : 29 30 33 36 37 40
for                  : 5 19
funcionclaseimpl     : 8 74
funcionimplbool      : 82
funcionimplnumero    : 80
funcionimplstring    : 81
funcionimplvoid      : 79
funcparentesis       : 146 147
id                   : 57 58 59 116 117 118 119 120 121 122 123 124 125 126 127 128 129
idarray              : 130 131 132 135 136 137 138
imprimir             : 3 21
initcondicion        : 49
masargumentosfuncion : 151
mascomparaciones     : 157 158 159 160
masparametros        : 96
masstatement         : 52
mathoperation        : 10 23 87 116 165 166 167 168
numero               : 61 63 100 102 133 134 163 164 191
numerotipo           : 75 87 88 89 102 116 117 118 130 131 132 188
operacionbool        : 24 90 124
operation            : 163
parametros           : 94 97
parametrosimpl       : 83 84 85 86 87 88 89 90 91 92
sinllaves            : 30 32 37 39 41 44
statement            : 50 53 54 64 101
stringappend         : 127
stringdata           : 141 142 143 194
struct               : 6 20
tipo                 : 95 96
unaryexp             : 102
usarfuncion          : 14 28
usarfuncionobjeto    : 13 27
valor                : 119 145 150 151 153 153 154 154 155 155
valorstatement       : 51 52
varblock             : 64 103 106
variable             : 2 18 47 103 104
variablearraychar    : 114
variablearraynumero  : 113
variableauto         : 109
variableboolean      : 115
variablechar         : 111
variablenumero       : 110
variablestring       : 112
while                : 4 17 46

Parsing method: LALR

state 0

    (0) S' -> . body
    (1) body -> . comparar PUNTOCOMA
    (2) body -> . variable
    (3) body -> . imprimir
    (4) body -> . while
    (5) body -> . for
    (6) body -> . struct
    (7) body -> . claseimplementacion
    (8) body -> . funcionclaseimpl
    (9) body -> . expresionif
    (10) body -> . mathoperation
    (11) body -> . creacionobjeto
    (12) body -> . asignarvalorobjeto
    (13) body -> . usarfuncionobjeto
    (14) body -> . usarfuncion
    (156) comparar -> . expresion
    (157) comparar -> . mascomparaciones expresion
    (158) comparar -> . LPAR mascomparaciones expresion RPAR
    (159) comparar -> . EXCLAMACION LPAR mascomparaciones expresion RPAR
    (160) comparar -> . LPAR mascomparaciones RPAR
    (109) variable -> . variableauto
    (110) variable -> . variablenumero
    (111) variable -> . variablechar
    (112) variable -> . variablestring
    (113) variable -> . variablearraynumero
    (114) variable -> . variablearraychar
    (115) variable -> . variableboolean
    (98) imprimir -> . PRINT LPAR concat RPAR PUNTOCOMA
    (99) imprimir -> . COUT MENOR MENOR concat PUNTOCOMA
    (100) imprimir -> . COUT MENOR MENOR numero PUNTOCOMA
    (101) while -> . WHILE LPAR statement RPAR LLAVEL bodyblock LLAVER
    (102) for -> . FOR LPAR numerotipo IDENTIFICADOR IGUAL numero PUNTOCOMA expresion PUNTOCOMA unaryexp RPAR LLAVEL bodyblock LLAVER
    (105) struct -> . STRUCT IDENTIFICADOR LLAVEL LLAVER IDENTIFICADOR PUNTOCOMA
    (106) struct -> . STRUCT IDENTIFICADOR LLAVEL varblock LLAVER IDENTIFICADOR PUNTOCOMA
    (65) claseimplementacion -> . CLASS IDENTIFICADOR LLAVEL bloqueclase LLAVER PUNTOCOMA
    (66) claseimplementacion -> . CLASS IDENTIFICADOR LLAVEL LLAVER PUNTOCOMA
    (67) claseimplementacion -> . CLASS IDENTIFICADOR LLAVEL acceso bloqueclase LLAVER PUNTOCOMA
    (79) funcionclaseimpl -> . funcionimplvoid
    (80) funcionclaseimpl -> . funcionimplnumero
    (81) funcionclaseimpl -> . funcionimplstring
    (82) funcionclaseimpl -> . funcionimplbool
    (29) expresionif -> . IF LPAR condicionif RPAR conllaves expresionpos
    (30) expresionif -> . IF LPAR condicionif RPAR sinllaves expresionpos
    (31) expresionif -> . IF LPAR condicionif RPAR conllaves
    (32) expresionif -> . IF LPAR condicionif RPAR sinllaves PUNTOCOMA
    (33) expresionif -> . IF LPAR condicionif RPAR PUNTOCOMA expresionpos
    (163) mathoperation -> . numero operation
    (164) mathoperation -> . numero
    (144) creacionobjeto -> . IDENTIFICADOR IDENTIFICADOR PUNTOCOMA
    (145) asignarvalorobjeto -> . IDENTIFICADOR PUNTO IDENTIFICADOR IGUAL valor PUNTOCOMA
    (146) usarfuncionobjeto -> . IDENTIFICADOR PUNTO IDENTIFICADOR funcparentesis PUNTOCOMA
    (147) usarfuncion -> . IDENTIFICADOR funcparentesis PUNTOCOMA
    (153) expresion -> . valor comparador valor
    (154) expresion -> . LPAR valor comparador valor RPAR
    (155) expresion -> . EXCLAMACION LPAR valor comparador valor RPAR
    (161) mascomparaciones -> . comparar comparador
    (162) mascomparaciones -> . comparar LPAR comparador RPAR
    (119) variableauto -> . AUTO id IGUAL valor PUNTOCOMA
    (120) variableauto -> . AUTO id PUNTOCOMA
    (116) variablenumero -> . numerotipo id IGUAL mathoperation PUNTOCOMA
    (117) variablenumero -> . numerotipo id PUNTOCOMA
    (118) variablenumero -> . numerotipo id IGUAL IDENTIFICADOR PUNTOCOMA
    (121) variablechar -> . CHAR id IGUAL CHARACTER PUNTOCOMA
    (122) variablechar -> . CHAR id PUNTOCOMA
    (123) variablechar -> . CHAR id IGUAL IDENTIFICADOR PUNTOCOMA
    (127) variablestring -> . STRING id IGUAL stringappend PUNTOCOMA
    (128) variablestring -> . STRING id IGUAL concat PUNTOCOMA
    (129) variablestring -> . STRING id PUNTOCOMA
    (130) variablearraynumero -> . numerotipo idarray PUNTOCOMA
    (131) variablearraynumero -> . numerotipo idarray IGUAL LLAVEL arraydatanumero LLAVER PUNTOCOMA
    (132) variablearraynumero -> . numerotipo idarray IGUAL LLAVEL LLAVER PUNTOCOMA
    (135) variablearraychar -> . CHAR idarray PUNTOCOMA
    (136) variablearraychar -> . CHAR idarray IGUAL LLAVEL LLAVER PUNTOCOMA
    (137) variablearraychar -> . CHAR idarray IGUAL LLAVEL datachar LLAVER PUNTOCOMA
    (138) variablearraychar -> . CHAR idarray IGUAL CADENA PUNTOCOMA
    (124) variableboolean -> . BOOL id IGUAL operacionbool PUNTOCOMA
    (125) variableboolean -> . BOOL id PUNTOCOMA
    (126) variableboolean -> . BOOL id IGUAL IDENTIFICADOR PUNTOCOMA
    (86) funcionimplvoid -> . VOID IDENTIFICADOR parametrosimpl LLAVEL bodyblock LLAVER
    (87) funcionimplnumero -> . numerotipo IDENTIFICADOR parametrosimpl LLAVEL bodyblock RETURN mathoperation PUNTOCOMA LLAVER
    (88) funcionimplnumero -> . numerotipo IDENTIFICADOR parametrosimpl LLAVEL bodyblock RETURN IDENTIFICADOR PUNTOCOMA LLAVER
    (89) funcionimplnumero -> . numerotipo IDENTIFICADOR parametrosimpl PUNTOCOMA
    (83) funcionimplstring -> . STRING IDENTIFICADOR parametrosimpl LLAVEL bodyblock RETURN concat PUNTOCOMA LLAVER
    (84) funcionimplstring -> . CHAR IDENTIFICADOR parametrosimpl LLAVEL bodyblock RETURN CHARACTER PUNTOCOMA LLAVER
    (85) funcionimplstring -> . CHAR IDENTIFICADOR parametrosimpl LLAVEL bodyblock RETURN IDENTIFICADOR PUNTOCOMA LLAVER
    (90) funcionimplbool -> . BOOL IDENTIFICADOR parametrosimpl LLAVEL bodyblock RETURN operacionbool PUNTOCOMA LLAVER
    (91) funcionimplbool -> . BOOL IDENTIFICADOR parametrosimpl LLAVEL bodyblock RETURN IDENTIFICADOR PUNTOCOMA LLAVER
    (92) funcionimplbool -> . BOOL IDENTIFICADOR parametrosimpl PUNTOCOMA
    (181) numero -> . ENTERO
    (182) numero -> . FLOTANTE
    (191) valor -> . numero
    (192) valor -> . CHARACTER
    (193) valor -> . boolean
    (194) valor -> . stringdata
    (183) numerotipo -> . INT
    (184) numerotipo -> . FLOAT
    (185) numerotipo -> . LONG
    (171) boolean -> . TRUE
    (172) boolean -> . FALSE
    (186) stringdata -> . CADENA
    (187) stringdata -> . IDENTIFICADOR

    LPAR            shift and go to state 18
    EXCLAMACION     shift and go to state 19
    PRINT           shift and go to state 27
    COUT            shift and go to state 28
    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    STRUCT          shift and go to state 34
    CLASS           shift and go to state 35
    IF              shift and go to state 40
    IDENTIFICADOR   shift and go to state 33
    AUTO            shift and go to state 42
    CHAR            shift and go to state 43
    STRING          shift and go to state 45
    BOOL            shift and go to state 47
    VOID            shift and go to state 48
    ENTERO          shift and go to state 49
    FLOTANTE        shift and go to state 50
    CHARACTER       shift and go to state 44
    INT             shift and go to state 53
    FLOAT           shift and go to state 54
    LONG            shift and go to state 55
    TRUE            shift and go to state 56
    FALSE           shift and go to state 57
    CADENA          shift and go to state 46

    body                           shift and go to state 1
    comparar                       shift and go to state 2
    variable                       shift and go to state 3
    imprimir                       shift and go to state 4
    while                          shift and go to state 5
    for                            shift and go to state 6
    struct                         shift and go to state 7
    claseimplementacion            shift and go to state 8
    funcionclaseimpl               shift and go to state 9
    expresionif                    shift and go to state 10
    mathoperation                  shift and go to state 11
    creacionobjeto                 shift and go to state 12
    asignarvalorobjeto             shift and go to state 13
    usarfuncionobjeto              shift and go to state 14
    usarfuncion                    shift and go to state 15
    expresion                      shift and go to state 16
    mascomparaciones               shift and go to state 17
    variableauto                   shift and go to state 20
    variablenumero                 shift and go to state 21
    variablechar                   shift and go to state 22
    variablestring                 shift and go to state 23
    variablearraynumero            shift and go to state 24
    variablearraychar              shift and go to state 25
    variableboolean                shift and go to state 26
    numero                         shift and go to state 29
    numerotipo                     shift and go to state 32
    funcionimplvoid                shift and go to state 36
    funcionimplnumero              shift and go to state 37
    funcionimplstring              shift and go to state 38
    funcionimplbool                shift and go to state 39
    valor                          shift and go to state 41
    boolean                        shift and go to state 51
    stringdata                     shift and go to state 52

state 1

    (0) S' -> body .



state 2

    (1) body -> comparar . PUNTOCOMA
    (161) mascomparaciones -> comparar . comparador
    (162) mascomparaciones -> comparar . LPAR comparador RPAR
    (173) comparador -> . IGUAL IGUAL
    (174) comparador -> . MENOR
    (175) comparador -> . MAYOR
    (176) comparador -> . MENOR IGUAL
    (177) comparador -> . MAYOR IGUAL
    (178) comparador -> . EXCLAMACION IGUAL

    PUNTOCOMA       shift and go to state 58
    LPAR            shift and go to state 60
    IGUAL           shift and go to state 61
    MENOR           shift and go to state 62
    MAYOR           shift and go to state 63
    EXCLAMACION     shift and go to state 64

    comparador                     shift and go to state 59

state 3

    (2) body -> variable .

    $end            reduce using rule 2 (body -> variable .)


state 4

    (3) body -> imprimir .

    $end            reduce using rule 3 (body -> imprimir .)


state 5

    (4) body -> while .

    $end            reduce using rule 4 (body -> while .)


state 6

    (5) body -> for .

    $end            reduce using rule 5 (body -> for .)


state 7

    (6) body -> struct .

    $end            reduce using rule 6 (body -> struct .)


state 8

    (7) body -> claseimplementacion .

    $end            reduce using rule 7 (body -> claseimplementacion .)


state 9

    (8) body -> funcionclaseimpl .

    $end            reduce using rule 8 (body -> funcionclaseimpl .)


state 10

    (9) body -> expresionif .

    $end            reduce using rule 9 (body -> expresionif .)


state 11

    (10) body -> mathoperation .

    $end            reduce using rule 10 (body -> mathoperation .)


state 12

    (11) body -> creacionobjeto .

    $end            reduce using rule 11 (body -> creacionobjeto .)


state 13

    (12) body -> asignarvalorobjeto .

    $end            reduce using rule 12 (body -> asignarvalorobjeto .)


state 14

    (13) body -> usarfuncionobjeto .

    $end            reduce using rule 13 (body -> usarfuncionobjeto .)


state 15

    (14) body -> usarfuncion .

    $end            reduce using rule 14 (body -> usarfuncion .)


state 16

    (156) comparar -> expresion .

    PUNTOCOMA       reduce using rule 156 (comparar -> expresion .)
    LPAR            reduce using rule 156 (comparar -> expresion .)
    IGUAL           reduce using rule 156 (comparar -> expresion .)
    MENOR           reduce using rule 156 (comparar -> expresion .)
    MAYOR           reduce using rule 156 (comparar -> expresion .)
    EXCLAMACION     reduce using rule 156 (comparar -> expresion .)
    OR              reduce using rule 156 (comparar -> expresion .)
    AND             reduce using rule 156 (comparar -> expresion .)
    RPAR            reduce using rule 156 (comparar -> expresion .)


state 17

    (157) comparar -> mascomparaciones . expresion
    (153) expresion -> . valor comparador valor
    (154) expresion -> . LPAR valor comparador valor RPAR
    (155) expresion -> . EXCLAMACION LPAR valor comparador valor RPAR
    (191) valor -> . numero
    (192) valor -> . CHARACTER
    (193) valor -> . boolean
    (194) valor -> . stringdata
    (181) numero -> . ENTERO
    (182) numero -> . FLOTANTE
    (171) boolean -> . TRUE
    (172) boolean -> . FALSE
    (186) stringdata -> . CADENA
    (187) stringdata -> . IDENTIFICADOR

    LPAR            shift and go to state 66
    EXCLAMACION     shift and go to state 67
    CHARACTER       shift and go to state 44
    ENTERO          shift and go to state 49
    FLOTANTE        shift and go to state 50
    TRUE            shift and go to state 56
    FALSE           shift and go to state 57
    CADENA          shift and go to state 46
    IDENTIFICADOR   shift and go to state 69

    expresion                      shift and go to state 65
    valor                          shift and go to state 41
    numero                         shift and go to state 68
    boolean                        shift and go to state 51
    stringdata                     shift and go to state 52

state 18

    (158) comparar -> LPAR . mascomparaciones expresion RPAR
    (160) comparar -> LPAR . mascomparaciones RPAR
    (154) expresion -> LPAR . valor comparador valor RPAR
    (161) mascomparaciones -> . comparar comparador
    (162) mascomparaciones -> . comparar LPAR comparador RPAR
    (191) valor -> . numero
    (192) valor -> . CHARACTER
    (193) valor -> . boolean
    (194) valor -> . stringdata
    (156) comparar -> . expresion
    (157) comparar -> . mascomparaciones expresion
    (158) comparar -> . LPAR mascomparaciones expresion RPAR
    (159) comparar -> . EXCLAMACION LPAR mascomparaciones expresion RPAR
    (160) comparar -> . LPAR mascomparaciones RPAR
    (181) numero -> . ENTERO
    (182) numero -> . FLOTANTE
    (171) boolean -> . TRUE
    (172) boolean -> . FALSE
    (186) stringdata -> . CADENA
    (187) stringdata -> . IDENTIFICADOR
    (153) expresion -> . valor comparador valor
    (154) expresion -> . LPAR valor comparador valor RPAR
    (155) expresion -> . EXCLAMACION LPAR valor comparador valor RPAR

    CHARACTER       shift and go to state 44
    LPAR            shift and go to state 18
    EXCLAMACION     shift and go to state 19
    ENTERO          shift and go to state 49
    FLOTANTE        shift and go to state 50
    TRUE            shift and go to state 56
    FALSE           shift and go to state 57
    CADENA          shift and go to state 46
    IDENTIFICADOR   shift and go to state 69

    mascomparaciones               shift and go to state 70
    expresion                      shift and go to state 16
    valor                          shift and go to state 71
    comparar                       shift and go to state 72
    numero                         shift and go to state 68
    boolean                        shift and go to state 51
    stringdata                     shift and go to state 52

state 19

    (159) comparar -> EXCLAMACION . LPAR mascomparaciones expresion RPAR
    (155) expresion -> EXCLAMACION . LPAR valor comparador valor RPAR

    LPAR            shift and go to state 73


state 20

    (109) variable -> variableauto .
